--- a/Notebooks/Citibike-Weather-Analysis_corrected.ipynb
+++ b/Notebooks/Citibike-Weather-Analysis_corrected.ipynb
@@ -365,9 +365,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python (20th_century)",
    "language": "python",
-   "name": "python3"
+   "name": "20th_century"
   },
   "language_info": {
    "codemirror_mode": {
@@ -379,7 +379,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.19"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
