Add temperature vs Citi Bike trip analysis notebooks

--- a/Weather_trip_analysis_corrected.ipynb
+++ b/Weather_trip_analysis_corrected.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "fc4099a8",
    "metadata": {},
    "outputs": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "47e8f287",
    "metadata": {},
    "outputs": [
@@ -120,7 +120,7 @@
        "4 2022-01-05         3.2"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "9bafaefe",
    "metadata": {},
    "outputs": [
@@ -271,7 +271,7 @@
        "4 2022-01-05          914"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +331,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
+   "id": "34773171-5215-4a5a-b948-dd4e519c88d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TRIPS range: 2022-01-01 00:00:00 2022-12-31 00:00:00\n",
+      "date\n",
+      "1     31\n",
+      "2     28\n",
+      "3     31\n",
+      "4     30\n",
+      "5     31\n",
+      "6     30\n",
+      "7     31\n",
+      "8     31\n",
+      "9     30\n",
+      "10    31\n",
+      "11    30\n",
+      "12    31\n",
+      "Name: count, dtype: int64\n",
+      "WEATHER range: 2022-01-01 00:00:00 2022-12-31 00:00:00\n",
+      "date\n",
+      "1     31\n",
+      "2     28\n",
+      "3     31\n",
+      "4     30\n",
+      "5     31\n",
+      "6     30\n",
+      "7     31\n",
+      "8     31\n",
+      "9     30\n",
+      "10    31\n",
+      "11    30\n",
+      "12    31\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"TRIPS range:\", daily_trips[\"date\"].min(), daily_trips[\"date\"].max())\n",
+    "print(daily_trips[\"date\"].dt.month.value_counts().sort_index())\n",
+    "\n",
+    "print(\"WEATHER range:\", weather_daily[\"date\"].min(), weather_daily[\"date\"].max())\n",
+    "print(weather_daily[\"date\"].dt.month.value_counts().sort_index())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "ba9a8503",
    "metadata": {},
    "outputs": [
@@ -414,14 +465,18 @@
        "4 2022-01-05          914         3.2"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "final_df = pd.merge(daily_trips, weather_daily[[\"date\", \"temp_avg_c\"]], on=\"date\", how=\"inner\")\n",
-    "\n",
+    "final_df = pd.merge(\n",
+    "    daily_trips,\n",
+    "    weather_daily[[\"date\", \"temp_avg_c\"]],\n",
+    "    on=\"date\",\n",
+    "    how=\"left\"\n",
+    ")\n",
     "# Sanity checks\n",
     "print(\"Merged range:\", final_df[\"date\"].min(), \"to\", final_df[\"date\"].max())\n",
     "print(\"Missing temp_avg_c:\", final_df[\"temp_avg_c\"].isna().sum())\n",
@@ -430,6 +485,196 @@
     "# Save the single merged file used by downstream notebooks\n",
     "final_df.to_csv(MERGED_OUT_PATH, index=False)\n",
     "final_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "8b71224d-6e66-4739-b413-b82fc302dcc0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique temps from 2022-09-07 onward: 1\n",
+      "count    116.0\n",
+      "mean      20.8\n",
+      "std        0.0\n",
+      "min       20.8\n",
+      "25%       20.8\n",
+      "50%       20.8\n",
+      "75%       20.8\n",
+      "max       20.8\n",
+      "Name: temp_avg_c, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "suffix = final_df[final_df[\"date\"] >= \"2022-09-07\"][\"temp_avg_c\"]\n",
+    "print(\"Unique temps from 2022-09-07 onward:\", suffix.nunique())\n",
+    "print(suffix.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "eacba744-8fb6-4d69-9048-bdd742a65130",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SAVED FILE range: 2022-01-01 00:00:00 2022-12-31 00:00:00\n",
+      "date\n",
+      "1     31\n",
+      "2     28\n",
+      "3     31\n",
+      "4     30\n",
+      "5     31\n",
+      "6     30\n",
+      "7     31\n",
+      "8     31\n",
+      "9     30\n",
+      "10    31\n",
+      "11    30\n",
+      "12    31\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "check = pd.read_csv(MERGED_OUT_PATH, parse_dates=[\"date\"])\n",
+    "print(\"SAVED FILE range:\", check[\"date\"].min(), check[\"date\"].max())\n",
+    "print(check[\"date\"].dt.month.value_counts().sort_index())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "fe0ef1dd-f1a2-4b4e-9ed8-a89548a03dfe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MERGED range: 2022-01-01 00:00:00 2022-12-31 00:00:00\n",
+      "MERGED months: date\n",
+      "1     31\n",
+      "2     28\n",
+      "3     31\n",
+      "4     30\n",
+      "5     31\n",
+      "6     30\n",
+      "7     31\n",
+      "8     31\n",
+      "9     30\n",
+      "10    31\n",
+      "11    30\n",
+      "12    31\n",
+      "Name: count, dtype: int64\n",
+      "Rows: 365\n",
+      "NaNs in temp_avg_c: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "final_df = pd.merge(\n",
+    "    daily_trips,\n",
+    "    weather_daily[[\"date\", \"temp_avg_c\"]],\n",
+    "    on=\"date\",\n",
+    "    how=\"left\"\n",
+    ")\n",
+    "\n",
+    "print(\"MERGED range:\", final_df[\"date\"].min(), final_df[\"date\"].max())\n",
+    "print(\"MERGED months:\", final_df[\"date\"].dt.month.value_counts().sort_index())\n",
+    "print(\"Rows:\", len(final_df))\n",
+    "print(\"NaNs in temp_avg_c:\", final_df[\"temp_avg_c\"].isna().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "36eddb5c-5203-4575-83b5-4c839510c537",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MERGED range: 2022-01-01 00:00:00 2022-12-31 00:00:00\n",
+      "date\n",
+      "1     31\n",
+      "2     28\n",
+      "3     31\n",
+      "4     30\n",
+      "5     31\n",
+      "6     30\n",
+      "7     31\n",
+      "8     31\n",
+      "9     30\n",
+      "10    31\n",
+      "11    30\n",
+      "12    31\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"MERGED range:\", final_df[\"date\"].min(), final_df[\"date\"].max())\n",
+    "print(final_df[\"date\"].dt.month.value_counts().sort_index())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "432239bf-47da-4df3-915f-a11ef4444935",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022-01-01 00:00:00 2022-09-07 00:00:00\n",
+      "date\n",
+      "1    31\n",
+      "2    28\n",
+      "3    31\n",
+      "4    30\n",
+      "5    31\n",
+      "6    30\n",
+      "7    31\n",
+      "8    31\n",
+      "9     7\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "raw_weather = pd.read_csv(RAW_WEATHER_PATH)\n",
+    "raw_weather[\"date\"] = pd.to_datetime(raw_weather[\"date\"], errors=\"coerce\")\n",
+    "print(raw_weather[\"date\"].min(), raw_weather[\"date\"].max())\n",
+    "print(raw_weather[\"date\"].dt.month.value_counts().sort_index())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "73ec857b-eefa-439d-89dd-c7bd0e30f624",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022-01-01 00:00:00 2022-12-31 00:00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(daily_trips[\"date\"].min(), daily_trips[\"date\"].max())"
    ]
   },
   {
@@ -515,9 +760,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python (20th_century)",
    "language": "python",
-   "name": "python3"
+   "name": "20th_century"
   },
   "language_info": {
    "codemirror_mode": {
@@ -529,7 +774,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.19"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
