Update Geospatial_Plotting notebook with top 300 routes map

--- a/Notebooks/Geospatial_Plotting.ipynb
+++ b/Notebooks/Geospatial_Plotting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "32f0c857-d6be-4522-8652-ede97154dc36",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "34fff572-3303-4cbf-9ad6-747bbc7292df",
    "metadata": {},
    "outputs": [
@@ -223,7 +223,7 @@
        "[5 rows x 40 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "16a3ca67-ca15-4e76-984f-7490449f6065",
    "metadata": {},
    "outputs": [],
@@ -245,8 +245,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "e0d37073-5b7a-4d3f-8607-355b41db6831",
+   "execution_count": 18,
+   "id": "1483c7fa-e1d8-4ea5-b149-71d5849dc45b",
    "metadata": {},
    "outputs": [
     {
@@ -272,110 +272,138 @@
        "      <th></th>\n",
        "      <th>start_station_name</th>\n",
        "      <th>end_station_name</th>\n",
+       "      <th>trip_count</th>\n",
        "      <th>start_lat</th>\n",
        "      <th>start_lng</th>\n",
        "      <th>end_lat</th>\n",
        "      <th>end_lng</th>\n",
-       "      <th>trip_count</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>11 St &amp; Washington St</td>\n",
-       "      <td>11 St &amp; Washington St</td>\n",
-       "      <td>40.747251</td>\n",
-       "      <td>-74.027879</td>\n",
-       "      <td>40.749985</td>\n",
-       "      <td>-74.02715</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Hoboken Terminal - Hudson St &amp; Hudson Pl</td>\n",
+       "      <td>Hoboken Ave at Monmouth St</td>\n",
+       "      <td>5565</td>\n",
+       "      <td>40.735937</td>\n",
+       "      <td>-74.030316</td>\n",
+       "      <td>40.735208</td>\n",
+       "      <td>-74.046964</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>11 St &amp; Washington St</td>\n",
-       "      <td>11 St &amp; Washington St</td>\n",
-       "      <td>40.749817</td>\n",
-       "      <td>-74.027383</td>\n",
-       "      <td>40.749985</td>\n",
-       "      <td>-74.02715</td>\n",
-       "      <td>1</td>\n",
+       "      <td>South Waterfront Walkway - Sinatra Dr &amp; 1 St</td>\n",
+       "      <td>South Waterfront Walkway - Sinatra Dr &amp; 1 St</td>\n",
+       "      <td>5439</td>\n",
+       "      <td>40.736989</td>\n",
+       "      <td>-74.027779</td>\n",
+       "      <td>40.736982</td>\n",
+       "      <td>-74.027781</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>11 St &amp; Washington St</td>\n",
-       "      <td>11 St &amp; Washington St</td>\n",
-       "      <td>40.749857</td>\n",
-       "      <td>-74.027530</td>\n",
-       "      <td>40.749985</td>\n",
-       "      <td>-74.02715</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Marin Light Rail</td>\n",
+       "      <td>Grove St PATH</td>\n",
+       "      <td>4113</td>\n",
+       "      <td>40.714584</td>\n",
+       "      <td>-74.042816</td>\n",
+       "      <td>40.719586</td>\n",
+       "      <td>-74.043117</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>11 St &amp; Washington St</td>\n",
-       "      <td>11 St &amp; Washington St</td>\n",
-       "      <td>40.749882</td>\n",
-       "      <td>-74.027380</td>\n",
-       "      <td>40.749985</td>\n",
-       "      <td>-74.02715</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Hoboken Ave at Monmouth St</td>\n",
+       "      <td>Hoboken Terminal - Hudson St &amp; Hudson Pl</td>\n",
+       "      <td>4083</td>\n",
+       "      <td>40.735222</td>\n",
+       "      <td>-74.046949</td>\n",
+       "      <td>40.735938</td>\n",
+       "      <td>-74.030305</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>11 St &amp; Washington St</td>\n",
-       "      <td>11 St &amp; Washington St</td>\n",
-       "      <td>40.749885</td>\n",
-       "      <td>-74.027409</td>\n",
-       "      <td>40.749985</td>\n",
-       "      <td>-74.02715</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Grove St PATH</td>\n",
+       "      <td>Marin Light Rail</td>\n",
+       "      <td>3973</td>\n",
+       "      <td>40.719591</td>\n",
+       "      <td>-74.043125</td>\n",
+       "      <td>40.714584</td>\n",
+       "      <td>-74.042817</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      start_station_name       end_station_name  start_lat  start_lng  \\\n",
-       "0  11 St & Washington St  11 St & Washington St  40.747251 -74.027879   \n",
-       "1  11 St & Washington St  11 St & Washington St  40.749817 -74.027383   \n",
-       "2  11 St & Washington St  11 St & Washington St  40.749857 -74.027530   \n",
-       "3  11 St & Washington St  11 St & Washington St  40.749882 -74.027380   \n",
-       "4  11 St & Washington St  11 St & Washington St  40.749885 -74.027409   \n",
+       "                             start_station_name  \\\n",
+       "0      Hoboken Terminal - Hudson St & Hudson Pl   \n",
+       "1  South Waterfront Walkway - Sinatra Dr & 1 St   \n",
+       "2                              Marin Light Rail   \n",
+       "3                    Hoboken Ave at Monmouth St   \n",
+       "4                                 Grove St PATH   \n",
        "\n",
-       "     end_lat   end_lng  trip_count  \n",
-       "0  40.749985 -74.02715           1  \n",
-       "1  40.749985 -74.02715           1  \n",
-       "2  40.749985 -74.02715           1  \n",
-       "3  40.749985 -74.02715           1  \n",
-       "4  40.749985 -74.02715           1  "
+       "                               end_station_name  trip_count  start_lat  \\\n",
+       "0                    Hoboken Ave at Monmouth St        5565  40.735937   \n",
+       "1  South Waterfront Walkway - Sinatra Dr & 1 St        5439  40.736989   \n",
+       "2                                 Grove St PATH        4113  40.714584   \n",
+       "3      Hoboken Terminal - Hudson St & Hudson Pl        4083  40.735222   \n",
+       "4                              Marin Light Rail        3973  40.719591   \n",
+       "\n",
+       "   start_lng    end_lat    end_lng  \n",
+       "0 -74.030316  40.735208 -74.046964  \n",
+       "1 -74.027779  40.736982 -74.027781  \n",
+       "2 -74.042816  40.719586 -74.043117  \n",
+       "3 -74.046949  40.735938 -74.030305  \n",
+       "4 -74.043125  40.714584 -74.042817  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "routes = (\n",
-    "    df.groupby(\n",
-    "        [\n",
-    "            \"start_station_name\",\n",
-    "            \"end_station_name\",\n",
-    "            \"start_lat\",\n",
-    "            \"start_lng\",\n",
-    "            \"end_lat\",\n",
-    "            \"end_lng\"\n",
-    "        ],\n",
-    "        as_index=False\n",
+    "for c in [\"start_lat\", \"start_lng\", \"end_lat\", \"end_lng\"]:\n",
+    "    df[c] = pd.to_numeric(df[c], errors=\"coerce\")\n",
+    "\n",
+    "# Keep only rows with valid route info\n",
+    "df_routes = df.dropna(subset=[\n",
+    "    \"start_station_name\", \"end_station_name\",\n",
+    "    \"start_lat\", \"start_lng\", \"end_lat\", \"end_lng\"\n",
+    "]).copy()\n",
+    "\n",
+    "# Aggregate trips by route (start->end), count trips\n",
+    "routes_agg = (\n",
+    "    df_routes\n",
+    "    .groupby([\"start_station_name\", \"end_station_name\"], as_index=False)\n",
+    "    .agg(\n",
+    "        trip_count=(\"ride_id\", \"count\"),\n",
+    "        start_lat=(\"start_lat\", \"mean\"),\n",
+    "        start_lng=(\"start_lng\", \"mean\"),\n",
+    "        end_lat=(\"end_lat\", \"mean\"),\n",
+    "        end_lng=(\"end_lng\", \"mean\"),\n",
     "    )\n",
-    "    .agg(trip_count=(\"trip_1\", \"sum\"))\n",
+    "    .sort_values(\"trip_count\", ascending=False)\n",
+    "    .head(300)\n",
+    "    .reset_index(drop=True)\n",
     ")\n",
-    "routes.head()"
+    "\n",
+    "routes_agg.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
+   "id": "43718e9e-a0d9-433a-8737-a88819f16053",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "routes_kepler = routes_agg.replace({np.nan: None})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "id": "3b953668-986c-4069-869d-fdb214e956d9",
    "metadata": {},
    "outputs": [
@@ -385,7 +413,7 @@
        "'C:\\\\Users\\\\User\\\\anaconda3\\\\python.exe'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,56 +425,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "3a4aac80-9e45-4c05-bbd9-25738e96b21b",
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 23,
+   "id": "c29e8013-ba7e-4dea-bc0d-f6524cacae1f",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "User Guide: https://docs.kepler.gl/docs/keplergl-jupyter\n"
+      "User Guide: https://docs.kepler.gl/docs/keplergl-jupyter\n",
+      "Map saved to maps/kepler_top300.html!\n",
+      "Saved: C:\\Users\\User\\Downloads\\Citibike-Weather-Dashboard\\Notebooks\\maps\\kepler_top300.html\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "IOPub data rate exceeded.\n",
-      "The Jupyter server will temporarily stop sending output\n",
-      "to the client in order to avoid crashing it.\n",
-      "To change this limit, set the config variable\n",
-      "`--ServerApp.iopub_data_rate_limit`.\n",
-      "\n",
-      "Current values:\n",
-      "ServerApp.iopub_data_rate_limit=1000000.0 (bytes/sec)\n",
-      "ServerApp.rate_limit_window=3.0 (secs)\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "668f0557c4fe40f3b052272b0cdea1ed",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "KeplerGl(data={'NYC Routes': {'index': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, …"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from keplergl import KeplerGl\n",
-    "map_1 = KeplerGl(height=500)\n",
-    "map_1.add_data(data=routes, name=\"NYC Routes\")\n",
-    "map_1"
+    "os.makedirs(\"maps\", exist_ok=True)\n",
+    "\n",
+    "map_top300 = KeplerGl(height=600)\n",
+    "map_top300.add_data(data=routes_kepler, name=\"Top 300 Routes\")\n",
+    "\n",
+    "map_top300.save_to_html(file_name=\"maps/kepler_top300.html\")\n",
+    "\n",
+    "print(\"Saved:\", os.path.abspath(\"maps/kepler_top300.html\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "5f4163d5-624c-4450-811a-69805c5f93e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User Guide: https://docs.kepler.gl/docs/keplergl-jupyter\n",
+      "Map saved to maps/kepler_top300.html!\n",
+      "Saved with arc config: C:\\Users\\User\\Downloads\\Citibike-Weather-Dashboard\\Notebooks\\maps\\kepler_top300.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "kepler_config = {\n",
+    "  \"version\": \"v1\",\n",
+    "  \"config\": {\n",
+    "    \"visState\": {\n",
+    "      \"layers\": [\n",
+    "        {\n",
+    "          \"id\": \"top300_arcs\",\n",
+    "          \"type\": \"arc\",\n",
+    "          \"config\": {\n",
+    "            \"dataId\": \"Top 300 Routes\",\n",
+    "            \"label\": \"Top 300 Routes (Arcs)\",\n",
+    "            \"columns\": {\n",
+    "              \"lat0\": \"start_lat\",\n",
+    "              \"lng0\": \"start_lng\",\n",
+    "              \"lat1\": \"end_lat\",\n",
+    "              \"lng1\": \"end_lng\"\n",
+    "            },\n",
+    "            \"isVisible\": True\n",
+    "          },\n",
+    "          \"visualChannels\": {\n",
+    "            \"sizeField\": {\"name\": \"trip_count\", \"type\": \"integer\"},\n",
+    "            \"sizeScale\": \"sqrt\"\n",
+    "          }\n",
+    "        }\n",
+    "      ]\n",
+    "    }\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "map_top300_cfg = KeplerGl(height=600, config=kepler_config)\n",
+    "map_top300_cfg.add_data(data=routes_kepler, name=\"Top 300 Routes\")\n",
+    "map_top300_cfg.save_to_html(file_name=\"maps/kepler_top300.html\")\n",
+    "print(\"Saved with arc config:\", os.path.abspath(\"maps/kepler_top300.html\"))"
    ]
   },
   {
