Final Streamlit dashboard with Plotly charts and Kepler map

--- a/Notebooks/Geospatial_Plotting.ipynb
+++ b/Notebooks/Geospatial_Plotting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 45,
    "id": "32f0c857-d6be-4522-8652-ede97154dc36",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 46,
    "id": "34fff572-3303-4cbf-9ad6-747bbc7292df",
    "metadata": {},
    "outputs": [
@@ -223,19 +223,28 @@
        "[5 rows x 40 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(r\"C:\\Users\\User\\Downloads\\Citibike-Weather-Dashboard\\Data\\Processed\\citibike_weather_2022.csv\")\n",
+    "BASE_DIR = os.path.abspath(os.path.join(os.getcwd(), \"..\"))\n",
+    "\n",
+    "DATA_PATH = os.path.join(\n",
+    "    BASE_DIR,\n",
+    "    \"Data\",\n",
+    "    \"Processed\",\n",
+    "    \"citibike_weather_2022.csv\"\n",
+    ")\n",
+    "\n",
+    "df = pd.read_csv(DATA_PATH)\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 47,
    "id": "16a3ca67-ca15-4e76-984f-7490449f6065",
    "metadata": {},
    "outputs": [],
@@ -245,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 48,
    "id": "1483c7fa-e1d8-4ea5-b149-71d5849dc45b",
    "metadata": {},
    "outputs": [
@@ -357,7 +366,7 @@
        "4 -74.043125  40.714584 -74.042817  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 49,
    "id": "43718e9e-a0d9-433a-8737-a88819f16053",
    "metadata": {},
    "outputs": [],
@@ -403,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 50,
    "id": "3b953668-986c-4069-869d-fdb214e956d9",
    "metadata": {},
    "outputs": [
@@ -413,7 +422,7 @@
        "'C:\\\\Users\\\\User\\\\anaconda3\\\\python.exe'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 51,
    "id": "c29e8013-ba7e-4dea-bc0d-f6524cacae1f",
    "metadata": {},
    "outputs": [
@@ -452,8 +461,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "5f4163d5-624c-4450-811a-69805c5f93e1",
+   "execution_count": 52,
+   "id": "d8c17ae0-97f0-4130-a686-96ad26de99a8",
    "metadata": {},
    "outputs": [
     {
@@ -462,14 +471,30 @@
      "text": [
       "User Guide: https://docs.kepler.gl/docs/keplergl-jupyter\n",
       "Map saved to maps/kepler_top300.html!\n",
-      "Saved with arc config: C:\\Users\\User\\Downloads\\Citibike-Weather-Dashboard\\Notebooks\\maps\\kepler_top300.html\n"
+      "Saved: C:\\Users\\User\\Downloads\\Citibike-Weather-Dashboard\\Notebooks\\maps\\kepler_top300.html\n"
      ]
     }
    ],
    "source": [
+    "import os\n",
+    "from keplergl import KeplerGl\n",
+    "import numpy as np\n",
+    "\n",
+    "os.makedirs(\"maps\", exist_ok=True)\n",
+    "\n",
+    "# routes_kepler should already exist\n",
+    "# routes_kepler = routes_agg.replace({np.nan: None})\n",
+    "\n",
     "kepler_config = {\n",
     "  \"version\": \"v1\",\n",
     "  \"config\": {\n",
+    "    \"mapState\": {              # ensures default view is NYC\n",
+    "      \"latitude\": 40.75,\n",
+    "      \"longitude\": -73.98,\n",
+    "      \"zoom\": 10.5,\n",
+    "      \"pitch\": 0,\n",
+    "      \"bearing\": 0\n",
+    "    },\n",
     "    \"visState\": {\n",
     "      \"layers\": [\n",
     "        {\n",
@@ -499,7 +524,8 @@
     "map_top300_cfg = KeplerGl(height=600, config=kepler_config)\n",
     "map_top300_cfg.add_data(data=routes_kepler, name=\"Top 300 Routes\")\n",
     "map_top300_cfg.save_to_html(file_name=\"maps/kepler_top300.html\")\n",
-    "print(\"Saved with arc config:\", os.path.abspath(\"maps/kepler_top300.html\"))"
+    "\n",
+    "print(\"Saved:\", os.path.abspath(\"maps/kepler_top300.html\"))"
    ]
   },
   {
@@ -532,18 +558,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 56,
+   "id": "276ef604-16fc-4953-b6e3-fe05a4d6c493",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User Guide: https://docs.kepler.gl/docs/keplergl-jupyter\n"
+     ]
+    }
+   ],
+   "source": [
+    "from keplergl import KeplerGl\n",
+    "\n",
+    "map_1 = KeplerGl(height=600)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "id": "fefee673-ae4b-4f34-9976-85205f6dcf2f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 5. Add aggregated data to map\n",
-    "map_1.add_data(data=routes, name=\"trip_connections\")"
+    "map_1.add_data(data=routes_agg, name=\"trip_connections\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 58,
    "id": "7df6f1d1-1833-41f5-8cb8-cf1f560d9e3c",
    "metadata": {},
    "outputs": [
